--- a/SS2-Table/baitap7.html
+++ b/SS2-Table/baitap7.html
@@ -6,6 +6,53 @@
     <title>BT7</title>
   </head>
   <body>
+    <!-- bai 1 -->
+
+    <fieldset>
+      <legend>Thông tin sản phẩm</legend>
+
+      <label for="name">Tên sản phẩm</label>
+
+      <input type="text" id="text" />
+
+      <label for="number">Số lượng</label>
+
+      <input type="number" id="number" />
+    </fieldset>
+
+    <fieldset>
+      <legend>Thông tin giao hàng</legend>
+
+      <label for="name">Họ và tên:</label>
+
+      <input type="name" id="name" />
+
+      <label for="email">Email:</label>
+
+      <input type="email" id="email" />
+
+      <label for="phone">Số điện thoại:</label>
+
+      <input type="phone" id="phone" />
+
+      <label for="address">Địa chỉ:</label>
+
+      <textarea name="address" id="address" cols="30" rows="10"></textarea>
+    </fieldset>
+
+    <fieldset>
+      <legend>Thông tin thanh toán</legend>
+
+      <label for="method">Phương thúc thanh toán</label>
+
+      <select name="" id="">
+        <option value="">Thanh toán khi nhận hàng</option>
+        <option value="">Thanh toán trả sau</option>
+      </select>
+    </fieldset>
+
+    <button>Đặt hàng</button>
+
     <!-- bai 2 -->
 
     <h1>Trang web bán hàng</h1>
