--- a/BT-Facebook/facebook.html
+++ b/BT-Facebook/facebook.html
@@ -3,19 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/BT-Facebook/facebook.css" />
     <title>HTML Form</title>
   </head>
 
   <body>
     <main>
-      <section>
+      <!-- section 1 -->
+      <!-- <form border="1"> -->
+      <section class="ss1">
         <form>
           <div>
-            <label for="email">Email hoặc điện thoại</label>
+            <label for="email" class="email">Email hoặc điện thoại</label>
             <input type="text" id="email" />
           </div>
           <div>
-            <label for="password">Mật khẩu</label>
+            <label for="password" class="password">Mật khẩu</label>
             <input type="password" id="password" />
           </div>
 
@@ -23,31 +26,38 @@
           <div>
             <div>
               <input type="checkbox" id="checkbox" />
-              <label for="checkbox">Duy trì đăng nhập</label>
+              <label for="checkbox" class="dtlogin">Duy trì đăng nhập</label>
             </div>
-            <a href="">Quên mật khẩu</a>
+            <a href="" class="fgpass">Quên mật khẩu</a>
           </div>
         </form>
       </section>
-      <section>
+
+      <!-- section 2 -->
+      <section class="ss2">
         <form>
           <h1>Đăng ký</h1>
           <h4>Miễn phí và sẽ luôn như vậy.</h4>
           <div>
-            <input type="text" placeholder="Họ" />
-            <input type="text" placeholder="Tên" />
+            <input type="text" placeholder="Họ" class="info" />
+            <input type="text" placeholder="Tên" class="info" />
           </div>
           <div>
-            <input type="text" placeholder="Email hoặc số điện thoại" />
+            <input
+              type="text"
+              placeholder="Email hoặc số điện thoại"
+              class="info"
+            />
           </div>
           <div>
             <input
               type="text"
               placeholder="Nhập lại email hoặc số điện thoại"
+              class="info"
             />
           </div>
           <div>
-            <input type="text" placeholder="Mật khẩu mới" />
+            <input type="text" placeholder="Mật khẩu mới" class="info" />
           </div>
           <h4>Ngày sinh</h4>
           <div>
@@ -72,9 +82,10 @@
             Bằng cách nhấp vào đăng ký , bạn đồng ý với các
             <a href="">điều khoản</a> của chúng tôi và bạn đã đọc...
           </p>
-          <button type="submit">Đăng Ký</button>
+          <button type="submit" class="dk">Đăng Ký</button>
         </form>
       </section>
+      <!-- </form> -->
     </main>
   </body>
 </html>
